fix overflow issues

--- a/css/drumheller.css
+++ b/css/drumheller.css
@@ -21,6 +21,10 @@ a{
   background-color: #0d0d0d;
 }
 
+a.extlink{
+  text-decoration: underline; 
+}
+
 a:hover{
   color: #ff4d4d;
 }
@@ -108,10 +112,11 @@ td{
 
 .info{
   text-align:center;
-  height:85%;
+  height:auto;
   display:none;
   padding: 3em;
   padding-top:5em;
+  padding-bottom:5em;
   width:80%;
   margin-left: auto;
   margin-right: auto;
@@ -125,9 +130,10 @@ td{
 }
 
 #inner-bio{
-  height:80%;
+  height:100%;
   max-height:100%;
-  max-width:100%;
+  max-width:900px;
+  margin: auto;
 }
 
 /*Different strokes for different folks */
